# AgentForge

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  do_commit.sh  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.claude/agent-memory/readme-doc-updater/: MEMORY.md  project_readme_structure.md
.claude/agents/: readme-doc-updater.md
.github/workflows/: deploy-staging.yml  k6-load-test.yml  pr-checks.yml  release.yml
Documents/: REQUIREMENTS.md  Tasks.md
apps/api/: Dockerfile  jest.integration.json  package.json  tsconfig.json  tsconfig.seed.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts  sentry.ts
apps/gateway/: Dockerfile  package.json  tsconfig.json
apps/gateway/k6/: load-test.js
apps/gateway/src/: crypto.ts  db.ts  index.ts  redis.ts  types.ts
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: global-setup.ts
apps/worker/: Dockerfile  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
apps/worker/app/: config.py  consumer.py  crypto.py  database.py  executor.py  models.py  storage.py  worker.py
apps/worker/app/metrics/: carbon.py  cost.py  grade.py  scorers.py
apps/worker/tests/: test_consumer.py  test_executor.py  test_integration.py  test_metrics.py  test_placeholder.py  test_storage.py  test_worker.py
k6/: load-test.js
(+187 files in other folders)
