[project]
name = "agentforge-worker"
version = "0.1.0"
description = "AgentForge evaluation worker — FastAPI + LiteLLM + HuggingFace evaluate"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "redis[hiredis]>=5.0.0",
  "litellm>=1.40.0",
  "evaluate>=0.4.0",
  "sentence-transformers>=3.0.0",
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",  # for TestClient
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
